<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.codepath.jaiminshah.gridimagesearch.activities.SettingsActivity">

    <!-- Settings Label-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_settings_header"
        android:id="@+id/tvSettingsLabel"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"/>

    <!-- Image Size -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_size"
        android:id="@+id/tvImageSize"
        android:layout_below="@+id/tvSettingsLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spnImageSize"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnImageSize"
        android:layout_below="@+id/tvSettingsLabel"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvImageSize"
        android:layout_toEndOf="@+id/tvImageSize"
        />

    <!-- Color Filter-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_color_filter"
        android:id="@+id/tvColorFilter"
        android:layout_below="@+id/tvImageSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spnColorFilter"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnColorFilter"
        android:layout_below="@+id/spnImageSize"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/tvColorFilter"
        android:layout_toEndOf="@id/tvColorFilter"/>


    <!-- Image Type-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_image_type"
        android:id="@+id/tvImageType"
        android:layout_below="@+id/tvColorFilter"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignBottom="@+id/spnImageType"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spnImageType"
        android:layout_below="@+id/spnColorFilter"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@id/tvImageType"
        android:layout_toEndOf="@id/tvImageType"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_site_filter"
        android:id="@+id/tvSiteFilter"
        android:layout_below="@+id/tvImageType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/etSiteFilter"
        android:layout_alignBottom="@+id/etSiteFilter"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_marginRight="@dimen/activity_vertical_margin"
        android:layout_marginEnd="@dimen/activity_vertical_margin"
        />
    <!-- Site Filter-->
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/etSiteFilter"
        android:layout_below="@+id/spnImageType"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/tvSiteFilter"
        android:layout_toEndOf="@+id/tvSiteFilter"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:inputType="text"
        android:hint="@string/hint_site_filter"/>

</RelativeLayout>
